k8s/overlays/prod/prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musicgang
  labels:
    name: musicgang
    app: musicgang
    kind: namespace
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: musicgang
  labels:
    name: nginx-ingress
    app: musicgang
    kind: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.musicgang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicgang-api-service
                port:
                  number: 8888
